--- a/scr/appsettings.Development.json
+++ b/scr/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionString": {
-    "IWantDb": "Server=localhost;Database=IWantDb;User Id=SA;Password=@ApiApp1;MultipleActiveResultSets=true;Encrypt=YES;TrustServerCertificate=YES"
+    "IWantDb": "Server=localhost;Database=IWantDb;User Id=SA;Password=84112677Ps3*;MultipleActiveResultSets=true;Encrypt=YES;TrustServerCertificate=YES"
   },
   
   "Logging": {
