--- a/scr/appsettings.json
+++ b/scr/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JwtBearerTokenSettings": {
+    "SecretKey": "A@fsdfsddsQQsDFCS35",
+    "Audience": "Audience",
+    "Issuer": "IWantAppIssuer",
+    "ExpiryTimeInSeconds":  60
+  }
 }
