--- a/scr/IWantApp.csproj
+++ b/scr/IWantApp.csproj
@@ -1,35 +1,59 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
-  <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-    <Nullable>enable</Nullable>
-    <ImplicitUsings>enable</ImplicitUsings>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net6.0</TargetFramework>
+		<Nullable>enable</Nullable>
+		<ImplicitUsings>enable</ImplicitUsings>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Dapper" Version="2.0.123" />
-    <PackageReference Include="Flunt" Version="2.0.5" />
-    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.10" />
-    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.10" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.10" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.10">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.10" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
-  </ItemGroup>
+	<ItemGroup>
+		<Using Include="Flunt.Notifications"/>
+		<Using Include="Microsoft.AspNetCore.Identity"/>
+		<Using Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore"/>
+		<Using Include="Microsoft.EntityFrameworkCore"/>
+		<Using Include="Microsoft.AspNetCore.Authentication.JwtBearer;"/>
+		<Using Include="Microsoft.AspNetCore.Authorization;"/>
+		<Using Include="Microsoft.IdentityModel.Tokens;"/>
+		<Using Include="System.Text;"/>
+		<Using Include="Flunt.Validations;"/>
+		<Using Include="System.Security.Claims;"/>
+		<Using Include="Microsoft.AspNetCore.Mvc;"/>
+		<Using Include="System.IdentityModel.Tokens.Jwt;"/>
+		<Using Include="Dapper;"/>
+		<Using Include="Microsoft.Data.SqlClient;"/>
+		<Using Include="Microsoft.AspNetCore.Diagnostics;"/>
 
-  <ItemGroup>
-    <EditorConfigFiles Remove="C:\Users\Mradmin\OneDrive\Documentos\Projeto API\scr\.editorconfig" />
-  </ItemGroup>
+		<Using Include="IWantApp.Domain.Products;"/>
+		<Using Include="IWantApp.Infra.Data;"/>
+		<Using Include="IWantApp.Endpoints.Categories;"/>
+		<Using Include="IWantApp.Endpoints.Employees;"/>
+		<Using Include="IWantApp.Endpoints.Security;"/>
+	</ItemGroup>
 
-  <ItemGroup>
-    <None Include="C:\Users\Mradmin\OneDrive\Documentos\Projeto API\scr\.editorconfig" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Dapper" Version="2.0.123" />
+		<PackageReference Include="Flunt" Version="2.0.5" />
+		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.10" />
+		<PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.10" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.10" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.10">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
+		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.10" />
+		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <Folder Include="Migrations\" />
-  </ItemGroup>
+	<ItemGroup>
+		<EditorConfigFiles Remove="C:\Users\Mradmin\OneDrive\Documentos\Projeto API\scr\.editorconfig" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<None Include="C:\Users\Mradmin\OneDrive\Documentos\Projeto API\scr\.editorconfig" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<Folder Include="Migrations\" />
+	</ItemGroup>
 
 </Project>
