--- a/scr/IWantApp.csproj
+++ b/scr/IWantApp.csproj
@@ -25,9 +25,11 @@
 		<Using Include="Serilog;" />
 		<Using Include="Serilog.Sinks.MSSqlServer;" />
 
+		<Using Include="IWantApp.Domain.Orders;" />
 		<Using Include="IWantApp.Domain.Users;" />
 		<Using Include="IWantApp.Domain.Products;" />
 		<Using Include="IWantApp.Infra.Data;" />
+		<Using Include="IWantApp.Endpoints.Orders;" />
 		<Using Include="IWantApp.Endpoints.Categories;" />
 		<Using Include="IWantApp.Endpoints.Employees;" />
 		<Using Include="IWantApp.Endpoints.Security;" />
